# xray-mcp

./: .gitignore  README.md  pyproject.toml
.codex/: config.toml
deploy/systemd/: xray-mcp-monitor-web.service  xray-mcp-monitor.service
tests/: test_cli.py  test_monitor.py  test_subscription.py  test_webapp.py
xray_mcp_monitor/: __init__.py  __main__.py  cli.py  models.py  monitor.py  server.py  subscription.py  webapp.py
xray_mcp_monitor/web/: app.js  index.html  styles.css
